--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -106,7 +106,7 @@ header {background-color: #fff;}
 
 .team-list 
 
-.team-list-item {background-color: #FFFFFF;}
+.team-list-item {background-color: #FFF;}
 .team-titles {color: #2E2F42;
     text-align: center;
     /* Header 3 */
